# napari-labeling

./: .gitignore  LICENSE  README.md  main.py  mkdocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml
docs/: index.md
napari_labeling/: __init__.py  _gui.py  _reader.py  _writer.py
napari_labeling/_tests/: example1.bson  example1.json  example1.tif  test_reader.py  test_writer.py
src/napari_labeling/: __init__.py  _create_widget.py  _reader.py  _widget.py  _writer.py  napari.yaml
src/napari_labeling/_tests/: test_reader.py  test_widget.py  test_writer.py
src/napari_labeling/_tests/resources/: example2_1.labeling.bson  example2_1.tif
